--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,53 @@
 [workspace]
 resolver = "2"
 members = [
+  "apps/mark-scan/accessible-controller",
   "libs/ballot-interpreter",
   "libs/logging",
+  "libs/pdi-rs",
   "libs/types-rs",
-  "apps/mark-scan/accessible-controller",
 ]
 
 [workspace.dependencies]
+anyhow = "1.0.75"
 base64 = "0.21.4"
 bitter = "0.6.1"
-clap = { version = "4.0.29", features = ["cargo"] }
+chrono = "0.4.31"
+clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
+color-eyre = "0.6.2"
 crc16 = "0.4.0"
+crossterm = "0.27.0"
+csv = "1.3.0"
 hex = "0.4.3"
-image = "0.24.5"
+image = { version = "0.24.7", default-features = false, features = [
+  "jpeg",
+  "png",
+] }
 imageproc = "0.23.0"
 itertools = "0.10.5"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
 logging_timer = "1.1.0"
 neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+neon-serde3 = "0.10.0"
+nom = "7.1.3"
 num_enum = "0.7.1"
 pretty_env_logger = "0.4.0"
 proptest = "1.0.0"
+psutil = "3.3.0"
+rand = "0.8.5"
+ratatui = "0.23.0"
 rayon = "1.5.3"
 rqrr = "0.6.0"
+rusb = "0.9.3"
 rusttype = "0.9.3"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 serialport = "4.2.2"
 tempfile = "3.3.0"
 thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
 zbar-rust = "0.0.21"
