--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,14 @@ itertools = "0.10.5"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
 logging_timer = "1.1.0"
-neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+neon = { version = "0.10", default-features = false, features = [
+  "napi-6",
+  "channel-api",
+] }
 neon-serde3 = "0.10.0"
 nom = "7.1.3"
 num_enum = "0.7.1"
+pdi-rs = { path = "libs/pdi-rs" }
 pretty_env_logger = "0.4.0"
 proptest = "1.0.0"
 psutil = "3.3.0"
