refactor(fs): rearrange some file system utilities
Moves some of the functionality from `@votingworks/backend` to a new `@votingworks/fs` and adds some useful functions to get closer to #4443.

--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -42,6 +42,7 @@
     "@votingworks/db": "workspace:*",
     "@votingworks/dev-dock-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
+    "@votingworks/fs": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
