--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -808,6 +808,29 @@ jobs:
       - store_test_results:
           path: libs/fixtures/reports/
 
+  # @votingworks/fs
+  test-libs-fs:
+    executor: nodejs
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            pnpm --dir libs/fs build
+      - run:
+          name: Lint
+          command: |
+            pnpm --dir libs/fs lint
+      - run:
+          name: Test
+          command: |
+            pnpm --dir libs/fs test
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: ./reports/
+      - store_test_results:
+          path: libs/fs/reports/
+
   # @votingworks/grout
   test-libs-grout:
     executor: nodejs
@@ -1249,6 +1272,7 @@ workflows:
       - test-libs-dev-dock-frontend
       - test-libs-eslint-plugin-vx
       - test-libs-fixtures
+      - test-libs-fs
       - test-libs-grout
       - test-libs-grout-test-utils
       - test-libs-hmpb-layout
