--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -130,6 +130,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "@votingworks/admin-backend": "workspace:*",
     "@votingworks/backend": "workspace:*",
+    "@votingworks/fs": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "@votingworks/printing": "workspace:*",
