--- a/libs/auth/tsconfig.json
+++ b/libs/auth/tsconfig.json
@@ -15,6 +15,7 @@
     { "path": "../db/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
+    { "path": "../fs/tsconfig.build.json" },
     { "path": "../logging/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
