--- a/libs/backend/tsconfig.json
+++ b/libs/backend/tsconfig.json
@@ -19,6 +19,7 @@
     { "path": "../../libs/basics/tsconfig.build.json" },
     { "path": "../../libs/eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../../libs/fixtures/tsconfig.build.json" },
+    { "path": "../../libs/fs/tsconfig.build.json" },
     { "path": "../../libs/grout/tsconfig.build.json" },
     { "path": "../../libs/logging/tsconfig.build.json" },
     { "path": "../../libs/test-utils/tsconfig.build.json" },
