--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "@votingworks/usb-drive",
+  "name": "@votingworks/fs",
   "version": "1.0.0",
   "private": true,
-  "description": "Library for interacting with a USB drive",
+  "description": "File system utilities for VotingWorks projects",
   "license": "GPL-3.0",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
   "types": "build/index.d.js",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
-    "clean": "rm -rf build *.tsbuildinfo",
+    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
@@ -32,27 +35,31 @@
   },
   "dependencies": {
     "@votingworks/basics": "workspace:*",
-    "@votingworks/fs": "workspace:*",
+    "@votingworks/grout": "workspace:*",
     "@votingworks/logging": "workspace:*",
-    "@votingworks/test-utils": "workspace:*",
+    "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
-    "debug": "4.3.4",
-    "tmp": "^0.2.1"
+    "buffer": "^6.0.3",
+    "micromatch": "^4.0.5",
+    "zod": "3.14.4"
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/tmp": "0.2.4",
-    "esbuild": "0.17.11",
-    "esbuild-runner": "2.2.2",
+    "@votingworks/fixtures": "workspace:*",
+    "@votingworks/test-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
+    "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
+    "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
+    "tmp": "^0.2.1",
     "ts-jest": "29.1.1"
   },
   "packageManager": "pnpm@8.1.0"
