--- a/libs/printing/tsconfig.build.json
+++ b/libs/printing/tsconfig.build.json
@@ -13,6 +13,7 @@
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
+    { "path": "../fs/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../logging/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" },
