--- a/libs/usb-drive/tsconfig.build.json
+++ b/libs/usb-drive/tsconfig.build.json
@@ -12,6 +12,7 @@
   "references": [
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
+    { "path": "../fs/tsconfig.build.json" },
     { "path": "../logging/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" }
   ]
