--- a/libs/usb-drive/tsconfig.json
+++ b/libs/usb-drive/tsconfig.json
@@ -13,6 +13,7 @@
   "references": [
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
+    { "path": "../fs/tsconfig.build.json" },
     { "path": "../logging/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" }
   ]
