--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ hex = "0.4.3"
 image = "0.24.5"
 imageproc = "0.23.0"
 itertools = "0.10.5"
+libc = "0.2.153"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
 logging_timer = "1.1.0"
