--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -44,6 +44,7 @@
     "@xmldom/xmldom": "^0.8.1",
     "buffer": "^6.0.3",
     "js-sha256": "^0.9.0",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "playwright": "^1.40.1",
     "react": "18.2.0",
