--- a/libs/pdi-rs/Cargo.toml
+++ b/libs/pdi-rs/Cargo.toml
@@ -22,6 +22,7 @@ clap = { workspace = true }
 color-eyre = { workspace = true }
 crc16 = { workspace = true }
 csv = { workspace = true }
+ctrlc = { workspace = true }
 crossterm = "0.27.0"
 image = { version = "0.24.7", default-features = false, features = [
     "bmp",
