--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -103,6 +103,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/tmp": "0.2.4",
     "@votingworks/backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
@@ -134,6 +135,7 @@
     "sort-package-json": "^1.50.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.11",
+    "tmp": "^0.2.1",
     "ts-jest": "29.1.1",
     "util": "^0.12.4",
     "vite": "4.5.0"
