--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -42,14 +42,20 @@
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
     "express": "4.18.2",
     "fs-extra": "11.1.1",
+    "i18next": "^23.5.1",
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "tmp": "^0.2.1",
     "zod": "3.14.4"
   },
@@ -58,16 +64,22 @@
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
+    "@types/i18next": "^13.0.0",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/tmp": "0.2.4",
+    "@votingworks/image-utils": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.17.11",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
