--- a/apps/mark/backend/tsconfig.json
+++ b/apps/mark/backend/tsconfig.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "composite": true,
     "esModuleInterop": true,
+    "jsx": "react-jsx",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "node16",
     "moduleResolution": "node16",
