Remove TZ=UTC from tests
Since our production machines run in the user's local timezone, we
should be testing our code in local timezones, not UTC. Better yet, we
should be testing our code in multiple different timezones. Since
CircleCI containers use UTC, removing this env variable accomplishes
that. Moving forward, if there's a timezone related discrepancy between
our local machines and CircleCI, we should consider that a legitimate
test failure and look into the root cause (which is likely a bug).

--- a/apps/central-scan/frontend/package.json
+++ b/apps/central-scan/frontend/package.json
@@ -18,9 +18,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=UTC node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=UTC node scripts/test.js --coverage --watchAll=false",
-    "test:watch": "TZ=UTC node scripts/test.js",
+    "test:ci": "node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "node scripts/test.js --coverage --watchAll=false",
+    "test:watch": "node scripts/test.js",
     "type-check": "tsc --build"
   },
   "lint-staged": {
