--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -22,9 +22,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "TZ=UTC jest --coverage",
-    "test:ci": "TZ=UTC jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:watch": "TZ=UTC jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:watch": "jest --watch",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
