--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,8 +7,7 @@
 libs/ballot-encoder/ @eventualbuddha
 libs/ballot-interpreter/ @eventualbuddha
 libs/eslint-plugin-vx/ @eventualbuddha
-libs/logging/ @carolinemodic
-.github/ @carolinemodic
+.github/ @arsalansufi
 libs/auth/ @arsalansufi
 libs/dev-dock/ @jonahkagan
 libs/grout/ @jonahkagan
