--- a/apps/mark-scan/backend/package.json
+++ b/apps/mark-scan/backend/package.json
@@ -87,8 +87,7 @@
     "lint-staged": "11.0.0",
     "nodemon": "^2.0.20",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1",
-    "wait-for-expect": "^3.0.2"
+    "ts-jest": "29.1.1"
   },
   "engines": {
     "node": ">= 16"
