--- a/apps/central-scan/backend/package.json
+++ b/apps/central-scan/backend/package.json
@@ -40,18 +40,18 @@
     "@votingworks/api": "workspace:*",
     "@votingworks/auth": "workspace:*",
     "@votingworks/backend": "workspace:*",
-    "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/basics": "workspace:*",
-    "@votingworks/converter-nh-accuvote": "workspace:*",
     "@votingworks/db": "workspace:*",
     "@votingworks/dev-dock-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
@@ -71,6 +71,7 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/supertest": "^2.0.10",
@@ -83,6 +84,7 @@
     "get-port": "5",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
