apps/admin/backend: Set test timezone to AKST
Set the timezone for tests to Alaska time so that report printing
snapshots can have a deterministic timezone across dev env and CI. I
picked Alaska because it's close to our production timezones
(importantly, on the same side of UTC) but doesn't
match any of our dev timezones. That way it's easy to tell that the
setting is working and it's not just using our local dev env timezones.

I also changed the tests to mock the time using the local system
timezone rather than a UTC timestamp so that the actual mocked date
doesn't change and is easier to reason about (the date written in the test
matches the date in the snapshot).

--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -17,11 +17,11 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
+    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test:debug": "TZ=America/Anchorage jest --inspect-brk $(which jest) --runInBand --no-cache",
     "test:perf": "jest --coverage=false --roots '<rootDir>/perf' --testMatch '<rootDir>/perf/**/*.test.ts'",
-    "test:watch": "jest --watch",
+    "test:watch": "TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
