--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -19,9 +19,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}' && stylelint 'src/**/*.css' --config .stylelintrc-css.js",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix && stylelint 'src/**/*.css' --config .stylelintrc-css.js --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "node scripts/test.js --coverage --watchAll=false",
-    "test:watch": "node scripts/test.js",
+    "test:ci": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false",
+    "test:watch": "TZ=America/Anchorage node scripts/test.js",
     "type-check": "tsc --build"
   },
   "lint-staged": {
@@ -81,7 +81,7 @@
     "js-file-download": "0.4.12",
     "js-sha256": "^0.9.0",
     "jsdom": "20.0.1",
-    "moment": "2.29.1",
+    "luxon": "^3.0.0",
     "node-fetch": "^2.6.0",
     "normalize.css": "^8.0.1",
     "pagedjs": "^0.1.40",
@@ -117,6 +117,7 @@
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
+    "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/pdfjs-dist": "2.1.3",
     "@types/pluralize": "^0.0.29",
