--- a/libs/converter-nh-accuvote/tsconfig.build.json
+++ b/libs/converter-nh-accuvote/tsconfig.build.json
@@ -13,6 +13,7 @@
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
+    { "path": "../hmpb/layout/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
