--- a/libs/converter-nh-accuvote/tsconfig.json
+++ b/libs/converter-nh-accuvote/tsconfig.json
@@ -14,8 +14,9 @@
     { "path": "../ballot-interpreter/tsconfig.build.json" },
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
-    { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
+    { "path": "../hmpb/layout/tsconfig.build.json" },
+    { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
     { "path": "../utils/tsconfig.build.json" }
