--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -19,7 +19,7 @@
     "test": "is-ci test:ci test:watch",
     "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
     "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:debug": "TZ=America/Anchorage jest --inspect-brk $(which jest) --runInBand --no-cache",
+    "test:debug": "TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
     "test:perf": "jest --coverage=false --roots '<rootDir>/perf' --testMatch '<rootDir>/perf/**/*.test.ts'",
     "test:watch": "TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
