--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -43,10 +43,13 @@
     "@types/debug": "4.1.8",
     "@types/he": "^1.1.2",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/jsdom": "20.0.0",
     "@types/luxon": "^3.0.0",
     "@types/tmp": "0.2.4",
+    "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
+    "@votingworks/qrdetect": "^1.0.1",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.17.11",
     "esbuild-runner": "2.2.2",
@@ -54,6 +57,7 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "ts-jest": "29.1.1"
