lint: set workspace-level lint rules and inherit them in crates

--- a/apps/mark-scan/accessible-controller/Cargo.toml
+++ b/apps/mark-scan/accessible-controller/Cargo.toml
@@ -17,3 +17,6 @@ serialport = { workspace = true }
 thiserror = { workspace = true }
 vx-logging = { workspace = true }
 uinput = { workspace = true }
+
+[lints]
+workspace = true
