--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,11 @@ thiserror = "1.0.50"
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
 zbar-rust = "0.0.21"
+
+[workspace.lints.rust]
+dead_code = "deny"
+
+[workspace.lints.clippy]
+pedantic = "deny"
+nursery = "deny"
+unwrap_used = "deny"
