--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 base64 = "0.21.4"
 bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo"] }
+color-eyre = "0.6.2"
 crc16 = "0.4.0"
 ctrlc = "3.4.2"
 hex = "0.4.3"
