ci: add `lint` step to crates
Calls `cargo clippy`.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1232,6 +1232,10 @@ jobs:
           command: |
             cargo build -p controllerd
       - run:
+          name: Lint
+          command: |
+            cargo clippy -p controllerd
+      - run:
           name: Test
           command: |
             cargo test -p controllerd
@@ -1246,6 +1250,10 @@ jobs:
           command: |
             cargo build -p types-rs
       - run:
+          name: Lint
+          command: |
+            cargo clippy -p types-rs
+      - run:
           name: Test
           command: |
             cargo test -p types-rs
@@ -1259,6 +1267,10 @@ jobs:
           name: Build
           command: |
             cargo build -p vx-logging
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p vx-logging
       - run:
           name: Test
           command: |
