--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -36,11 +36,12 @@
     ]
   },
   "dependencies": {
+    "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/hmpb-layout": "workspace:*",
     "@votingworks/types": "workspace:*",
-    "@votingworks/ui": "workspace:^",
+    "@votingworks/ui": "workspace:*",
     "@xmldom/xmldom": "^0.8.1",
     "buffer": "^6.0.3",
     "js-sha256": "^0.9.0",
