build: replace `pnpm` config with `bun`

--- a/package.json
+++ b/package.json
@@ -54,11 +54,69 @@
     "stylelint-config-standard": "^34.0.0",
     "typescript": "5.2.2"
   },
-  "pnpm": {
-    "overrides": {
-      "@types/eslint": "8.4.1",
-      "typescript": "5.2.2",
-      "graceful-fs": "^4.2.9"
-    }
-  }
+  "workspaces": [
+"apps/admin/backend",
+"apps/admin/frontend",
+"apps/admin/frontend/prodserver",
+"apps/admin/integration-testing",
+"apps/central-scan/backend",
+"apps/central-scan/frontend",
+"apps/central-scan/frontend/prodserver",
+"apps/central-scan/integration-testing",
+"apps/design/backend",
+"apps/design/frontend",
+"apps/mark-scan/backend",
+"apps/mark-scan/frontend",
+"apps/mark-scan/frontend/prodserver",
+"apps/mark-scan/integration-testing",
+"apps/mark/backend",
+"apps/mark/frontend",
+"apps/mark/frontend/prodserver",
+"apps/mark/integration-testing",
+"apps/scan/backend",
+"apps/scan/frontend",
+"apps/scan/frontend/prodserver",
+"docs/exercises",
+"libs/@types/compress-commons",
+"libs/@types/jsfeat",
+"libs/@types/kiosk-browser",
+"libs/@types/node-quirc",
+"libs/@types/stream-chopper",
+"libs/@types/zip-stream",
+"libs/api",
+"libs/auth",
+"libs/backend",
+"libs/ballot-encoder",
+"libs/ballot-interpreter",
+"libs/basics",
+"libs/cdf-schema-builder",
+"libs/converter-nh-accuvote",
+"libs/custom-paper-handler",
+"libs/custom-scanner",
+"libs/cvr-fixture-generator",
+"libs/db",
+"libs/dev-dock/backend",
+"libs/dev-dock/frontend",
+"libs/eslint-plugin-vx",
+"libs/fixtures",
+"libs/fs",
+"libs/grout",
+"libs/grout/test-utils",
+"libs/hmpb/layout",
+"libs/hmpb/render-backend",
+"libs/image-utils",
+"libs/logging",
+"libs/mark-flow-ui",
+"libs/message-coder",
+"libs/monorepo-utils",
+"libs/printing",
+"libs/res-to-ts",
+"libs/test-utils",
+"libs/types",
+"libs/types-rs",
+"libs/ui",
+"libs/usb-drive",
+"libs/utils",
+"script"
+  ]
 }
