--- a/libs/eslint-plugin-vx/tsconfig.build.json
+++ b/libs/eslint-plugin-vx/tsconfig.build.json
@@ -6,6 +6,8 @@
     "noEmit": false,
     "rootDir": "src",
     "outDir": "build",
-    "declaration": true
+    "declaration": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   }
 }
