--- a/libs/logging/tsconfig.build.json
+++ b/libs/logging/tsconfig.build.json
@@ -6,7 +6,9 @@
     "noEmit": false,
     "rootDir": "src",
     "outDir": "build",
-    "declaration": true
+    "declaration": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   },
   "references": [
     { "path": "../basics/tsconfig.build.json" },
