--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -71,12 +71,10 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/compression": "^1.7.2",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash.memoize": "^4.1.9",
     "@types/lodash.set": "^4.3.7",
@@ -98,16 +96,11 @@
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.set": "^4.3.2",
     "nodemon": "^2.0.20",
     "sort-package-json": "^1.50.0",
-    "supertest": "^6.0.1",
-    "ts-jest": "29.1.1"
+    "supertest": "^6.0.1"
   },
   "engines": {
     "node": ">= 16"
