--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -64,11 +64,9 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash.get": "^4.4.9",
     "@types/node": "16.18.23",
@@ -86,16 +84,11 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.get": "^4.4.2",
     "nodemon": "^2.0.20",
     "sort-package-json": "^1.50.0",
-    "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "tmp": "^0.2.1"
   },
   "engines": {
     "node": ">= 12"
