--- a/libs/api/package.json
+++ b/libs/api/package.json
@@ -41,15 +41,10 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
