--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -66,7 +66,6 @@
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/lodash.merge": "^4.6.9",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
@@ -81,14 +80,10 @@
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.set": "^4.3.2",
     "memory-streams": "^0.1.3",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
