--- a/libs/ballot-encoder/package.json
+++ b/libs/ballot-encoder/package.json
@@ -39,19 +39,14 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/text-encoding": "^0.0.35",
     "@votingworks/fixtures": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "engines": {
     "node": ">= 12"
