--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -59,7 +59,6 @@
     "@types/chalk": "^2.2.0",
     "@types/debug": "4.1.8",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/node-quirc": "workspace:*",
@@ -72,13 +71,8 @@
     "eslint-plugin-vx": "workspace:*",
     "fs-extra": "11.1.1",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
