--- a/libs/basics/package.json
+++ b/libs/basics/package.json
@@ -36,17 +36,12 @@
   },
   "devDependencies": {
     "@types/deep-eql": "^4.0.2",
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
