--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -38,10 +38,8 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/he": "^1.1.2",
-    "@types/jest": "^29.5.3",
     "@types/jsdom": "20.0.0",
     "@types/luxon": "^3.0.0",
     "@types/tmp": "0.2.4",
@@ -51,10 +49,6 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
-    "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "is-ci-cli": "2.2.0"
   }
 }
