--- a/libs/custom-paper-handler/package.json
+++ b/libs/custom-paper-handler/package.json
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/w3c-web-usb": "^1.0.6",
     "@votingworks/test-utils": "workspace:*",
@@ -41,11 +40,7 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-mock-extended": "^3.0.4",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "jest-mock-extended": "^3.0.4"
   },
   "packageManager": "pnpm@8.1.0"
 }
