--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -25,18 +25,12 @@
     "debug": "4.3.4"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/better-sqlite3": "7.6.3",
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/tmp": "0.2.4",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "tmp": "^0.2.1"
   }
 }
