--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -41,16 +41,11 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/react": "18.2.18",
     "@typescript-eslint/rule-tester": "^6.7.0",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "react": "18.2.0",
-    "ts-jest": "29.1.1"
+    "react": "18.2.0"
   }
 }
