--- a/libs/fixtures/package.json
+++ b/libs/fixtures/package.json
@@ -36,24 +36,19 @@
     ]
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@votingworks/types": "workspace:*",
     "buffer": "^6.0.3",
-    "canvas": "2.9.1",
     "csv-writer": "^1.6.0",
     "js-sha256": "^0.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@votingworks/res-to-ts": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
