--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -45,7 +45,6 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/tmp": "0.2.4",
     "@votingworks/fixtures": "workspace:*",
@@ -53,14 +52,10 @@
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
-    "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "tmp": "^0.2.1"
   },
   "packageManager": "pnpm@8.1.0"
 }
