--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -39,19 +39,14 @@
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.5.3",
     "@types/luxon": "^3.0.0",
     "@types/node-fetch": "^2.6.0",
     "eslint-plugin-vx": "workspace:*",
     "expect-type": "^0.15.0",
     "express": "4.18.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
