--- a/libs/hmpb/layout/package.json
+++ b/libs/hmpb/layout/package.json
@@ -46,20 +46,15 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "peerDependencies": {
     "react": "18.2.0",
