--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -48,8 +48,6 @@
     "svg-to-pdfkit": "^0.1.8"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
-    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
@@ -60,13 +58,9 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "tmp": "^0.2.1"
   },
   "engines": {
     "node": ">= 12"
