--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -40,9 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/pdfjs-dist": "2.1.3",
@@ -52,11 +50,6 @@
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "11.0.0",
-    "ts-jest": "29.1.1"
+    "lint-staged": "11.0.0"
   }
 }
