--- a/libs/message-coder/package.json
+++ b/libs/message-coder/package.json
@@ -23,14 +23,9 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
-    "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "is-ci-cli": "2.2.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
