--- a/libs/printing/package.json
+++ b/libs/printing/package.json
@@ -51,7 +51,6 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/react": "18.2.18",
@@ -63,13 +62,8 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
