--- a/libs/res-to-ts/package.json
+++ b/libs/res-to-ts/package.json
@@ -29,7 +29,6 @@
     "tmp": "^0.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/mime": "^2.0.3",
     "@types/node": "16.18.23",
     "@types/tmp": "0.2.4",
@@ -37,10 +36,6 @@
     "esbuild": "0.17.11",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
-    "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1"
+    "is-ci-cli": "2.2.0"
   }
 }
