--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -45,7 +45,6 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/lodash.set": "^4.3.7",
@@ -59,14 +58,10 @@
     "fast-check": "2.23.2",
     "fast-glob": "^3.2.11",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.set": "^4.3.2",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
