--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -52,7 +52,6 @@
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/fast-text-encoding": "^1.0.1",
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.setwith": "^4.3.9",
     "@types/luxon": "^3.0.0",
@@ -66,15 +65,11 @@
     "fast-check": "2.23.2",
     "fetch-mock": "9.11.0",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "node-fetch": "^2.6.0",
-    "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "sort-package-json": "^1.50.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
