refactor: replace `canvas` with `@napi-rs/canvas`
Note that this is totally broken. We used `ImageData` from `canvas` in such a way that we used it to represent either grayscale (1 channel) or rgba (4 channels). This may be non-standard and seems to be unsupported by `@napi-rs/canvas`. This will likely require a lot of changes to make it work.

--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -20,6 +20,7 @@
   },
   "packageManager": "pnpm@8.1.0",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
@@ -27,7 +28,6 @@
     "@votingworks/utils": "workspace:*",
     "@xmldom/xmldom": "^0.8.1",
     "buffer": "^6.0.3",
-    "canvas": "2.9.1",
     "chalk": "4.1.2",
     "debug": "4.3.4",
     "he": "^1.2.0",
