--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
@@ -48,7 +49,6 @@
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "better-sqlite3": "8.2.0",
-    "canvas": "2.9.1",
     "chalk": "4.1.2",
     "debug": "4.3.4",
     "node-quirc": "^2.2.1",
