--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -19,11 +19,11 @@
   "license": "GPL-3.0",
   "packageManager": "pnpm@8.1.0",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
-    "canvas": "2.9.1",
     "debug": "4.3.4",
     "pdfjs-dist": "2.3.200",
     "tmp": "^0.2.1"
