chore: replace `canvas` with `@napi-rs/canvas`

--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@tanstack/react-query": "4.32.1",
     "@tanstack/react-query-devtools": "4.32.1",
     "@votingworks/ballot-encoder": "workspace:*",
@@ -67,7 +68,6 @@
     "base64-js": "1.5.1",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "canvas": "2.9.1",
     "debug": "4.3.4",
     "dompurify": "^2.0.12",
     "dotenv": "16.3.1",
