--- a/apps/mark-scan/frontend/package.json
+++ b/apps/mark-scan/frontend/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@rooks/use-interval": "^4.5.0",
     "@tanstack/react-query": "4.32.1",
     "@votingworks/ballot-encoder": "workspace:*",
@@ -63,7 +64,6 @@
     "@votingworks/utils": "workspace:*",
     "abortcontroller-polyfill": "^1.4.0",
     "buffer": "^6.0.3",
-    "canvas": "2.9.1",
     "debug": "4.3.4",
     "dotenv": "16.3.1",
     "dotenv-expand": "9.0.0",
