--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "@votingworks/auth": "workspace:*",
     "@votingworks/backend": "workspace:*",
     "@votingworks/ballot-encoder": "workspace:*",
@@ -57,7 +58,6 @@
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
-    "canvas": "2.9.1",
     "debug": "4.3.4",
     "express": "4.18.2",
     "fs-extra": "11.1.1",
